--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>Bloc Jams</title>
     </head>
     <body>
-        <div></div> <!-- navigation bar -->
-        <div> <!-- hero content -->
+        <nav>Menu</nav> <!-- navigation bar -->
+        <section> <!-- hero content -->
              <h1>Bloc Jams</h1>  
              <h3>Turn the music up!</h3>
-        </div> 
-        <div> <!-- selling points -->
+        </section>
+        <section> <!-- selling points -->
             <div>
               <h5>Choose your music.</h5>
               <p>The world is full of great music. Why should you have to listen to music someone else chose?</p>
@@ -22,6 +22,6 @@
               <h5>Mobile enabled.</h5>
               <p>Listen to your music on any mobile platform.</p>
             </div>
-        </div> 
+        </section> 
     </body>
 </html>
